# rust-playground

./: .gitignore  README.md
bin_parent_dir/: Cargo.toml  README.md
bin_parent_dir/src/: handlers.rs  lib.rs
ch01-hello_world/: Cargo.toml
hello-world-http-basic/: Cargo.toml  README.md
hello-world-http-basic/src/: main.rs
postgresql-struct-generator/: Cargo.toml  README.md
postgresql-struct-generator/src/: main.rs
