[package]
name = "postgresql-struct-generator"
version = "0.1.0"
authors = ["Aizat Faiz <aizat.faiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
heck = "0.3.1"
native-tls = "0.2.4"
postgres = "0.17.2"
postgres-native-tls = "0.3.0"
